--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 body{
-	background-color: #C9DAEA;
+	background-color:rgb(254, 254, 255);;
 	font-family: 'Proxima Nova', Georgia, sans-serif;
 }
 h1{
@@ -9,13 +9,16 @@ h1{
 	text-align: center;
 }
 hr{
-	height: 2px;
-	color: #211A1D;
-	background-color: #211A1D;
+	margin: 0;
+	height: 1px;
+	color: rgb(218, 218, 218);
+	background-color: rgb(167, 167, 167);
 	border: 0;
+	position: relative;
 }
 .profile{
 	float: left;
+	background-color: #F8F8FF;
 	font-size: 2.4vw;
 	width: 100%;
 }
@@ -43,11 +46,17 @@ hr{
 	border-color: #211A1D;
 	border-radius: 100%;
 }
+.gallerycontainer{
+	width: 100%;
+	height:100%;
+	background-color: #F8F8FF;
+}
 .gallery{
 	margin-top: 10vw;
 	position: center;
 	width: 70%;
 	margin: 0 auto;
+	background-color: #F8F8FF;
 }
 .pics{
 	height: 17vw;
