--- a/style.css
+++ b/style.css
@@ -12,32 +12,48 @@ body{
 	font-family: 'Proxima Nova', Georgia, sans-serif;
 	margin: 0;
 }
+.content{
+	background-color: #F8F8FF;
+	margin: 0;
+	padding: 0;
+	height: 100%;
+}
+.bandeau{
+	float: left;
+	background-color:rgb(254, 254, 255);
+	border-bottom: solid 1px;
+	border-color:  rgb(186, 182, 207);
+	height: 80px;
+	width: 100%;
+	margin: 0;
+	position: absolute;
+}
 h1{
 	font-family: 'Proxima Nova', Georgia, sans-serif;
-	font-size: 3vw;
+	font-size: 30px;
 	text-align: center;
+	
 }
 .profile{
 	float: left;
+	margin: 0;
 	font-size: 2.4vw;
 	width: 100%;
 	background-color: #F8F8FF;
-	border-top: solid 1px;
-	border-top-color:  rgb(167, 167, 167);
+	margin-top: 80px;
 }
 .bio{
 	font-size: 2vw;
 }
 .profile p{
 	margin-left: 23vw; 
-	
 }
 .settings {
 	margin-right: 10vw; 
 	margin-top: 6vw; 
 	height: 4vw;
 	float: right;
-	border: solid 3px;
+	border: solid 0.2vw;
 	border-color: rgb(31, 26, 26);
 }
 .pp{
@@ -66,4 +82,107 @@ h1{
 	margin: 2vw;
 	border-radius: 10px;
 }
-.pics:hover {opacity: 0.7;}
+.pics:hover {
+	opacity: 0.7;
+}
+.photocontainer{
+	float: left;
+	margin: 7vw;
+	background-color:rgb(254, 254, 255);
+	margin-top: 150px;
+	border: solid 1px;
+	border-color:  rgb(186, 182, 207);
+}
+.photo{
+	height: 40vw;
+	border-right: solid 1px;
+	border-color:  rgb(186, 182, 207);
+}
+.side{
+	float: right;
+	width: 31vw;
+}
+.poster{
+	width: 100%;
+	height: 8vw;
+	margin: 0;
+	float: left;
+	border-bottom: solid 0.1vw;
+	border-color:  rgb(186, 182, 207);
+}
+.posterpp{
+	float: left;
+	height: 5vw;
+	margin: 1vw;
+	border-radius: 100%;
+}
+.poster p{
+	font-weight: bold;
+	float: left;
+	font-size: 2vw;
+	margin: 1.5vw;
+	margin-top: 2.5vw;
+}
+.reactions{
+	float: left;
+	width: 100%;
+	margin: 0;
+	height: 4vw;
+	border-bottom: solid 0.1vw;
+	border-color:  rgb(186, 182, 207);
+}
+.reactions p{
+	font-weight: bold;
+	float: left;
+	font-size: 2.3vw;
+	margin-left: 1vw;
+	margin-top: 0.6vw;
+}
+.likeimg{
+	float: left;
+	height: 3vw;
+	margin: 0.3vw;
+}
+.comimg{
+	float: left;
+	height: 3vw;
+	margin: 0.5vw;
+	margin-left: 10vw;
+}
+.comments{
+	width: 100%;
+	margin: 0;
+	height: 27.8vw;
+	overflow-x: hidden;
+	overflow-y: scroll;
+}
+.comment{
+  	height: auto;
+  	display: flex;
+  	align-items: flex-start;
+}
+.compp{
+	height: 5vw;
+	border-radius: 100%;
+	margin: 0.5vw;
+}
+.comcontainer{
+	margin-top: 2vw;
+	padding-right: 0.5vw;
+	padding-bottom: 0.5vw;
+	align-self: stretch;
+}
+.comcontent{
+	margin: 0;
+	float: left;
+	font-weight: bold;
+	font-size: 1.5vw;
+	margin-right: 0.5vw;
+}
+.comcontent2{
+	float: left;
+	margin: 0;
+	font-size: 1.5vw;
+	word-wrap: break-word;
+	
+}
