--- a/style.css
+++ b/style.css
@@ -17,6 +17,9 @@ body{
 	margin: 0;
 	padding: 0;
 	height: 100%;
+	width:100%; 
+	display: flex;
+	flex-direction: column;
 }
 .bandeau{
 	float: left;
@@ -66,8 +69,10 @@ h1{
 }
 .gallerycontainer{
 	margin: 0 auto;
-	width: 100%;
 	height: 100%;
+	width:100%; 
+	display: flex;
+	flex-direction: column;
 	background-color: #F8F8FF;
 }
 .gallery{
