--- a/style.css
+++ b/style.css
@@ -28,41 +28,50 @@ body{
 	border-color:  rgb(186, 182, 207);
 	height: 80px;
 	width: 100%;
-	margin: 0;
+	margin: 0; 
 	position: absolute;
+	padding: 0;
 }
-h1{
+.bandeau p{
+	float: left;
 	font-family: 'Proxima Nova', Georgia, sans-serif;
-	font-size: 30px;
-	text-align: center;
+	font-size: 40px;
+	margin: 0;
+	margin-top: 15px;
+	margin-left: 4vw;
 	
+}
+.profileicon{
+	margin-top: 28px; 
+	height: 23px;
+	margin-right: 4vw;
+	float: right;
+}
+.settings {
+	margin-top: 27px; 
+	height: 25px;
+	margin-right: 4vw;
+	float: right;
 }
 .profile{
 	float: left;
 	margin: 0;
-	font-size: 2.4vw;
+	font-size: 20px;
 	width: 100%;
 	background-color: #F8F8FF;
 	margin-top: 80px;
 }
 .bio{
-	font-size: 2vw;
+	font-size: 18px;
 }
 .profile p{
-	margin-left: 23vw; 
-}
-.settings {
-	margin-right: 10vw; 
-	margin-top: 6vw; 
-	height: 4vw;
-	float: right;
-	border: solid 0.2vw;
-	border-color: rgb(31, 26, 26);
+	margin-left: 17vw; 
 }
 .pp{
-	height: 15vw;
-	margin: 1vw;
+	height: 100px;
+	margin-top: 20px;
 	margin-left: 4vw;
+	margin-right: 15px;
 	font-size: 2vw;
 	float: left;
 	border-radius: 100%;
@@ -94,7 +103,7 @@ h1{
 	float: left;
 	margin: 7vw;
 	background-color:rgb(254, 254, 255);
-	margin-top: 150px;
+	margin-top: 100px;
 	border: solid 1px;
 	border-color:  rgb(186, 182, 207);
 }
