--- a/style.css
+++ b/style.css
@@ -101,20 +101,24 @@ body{
 }
 .photocontainer{
 	float: left;
-	margin: 7vw;
-	background-color:rgb(254, 254, 255);
+	margin: 0 auto;
+	background-color:rgb(186, 182, 207);
 	margin-top: 100px;
 	border: solid 1px;
 	border-color:  rgb(186, 182, 207);
 }
 .photo{
 	height: 40vw;
-	border-right: solid 1px;
-	border-color:  rgb(186, 182, 207);
+	background-color:rgb(254, 254, 255);
+	margin: 0;
 }
 .side{
 	float: right;
-	width: 31vw;
+	width: 32.3vw;
+	border-left: solid 0.1vw;
+	border-color:  rgb(186, 182, 207);
+	background-color:rgb(254, 254, 255);
+	margin: 0;
 }
 .poster{
 	width: 100%;
@@ -199,4 +203,115 @@ body{
 	font-size: 1.5vw;
 	word-wrap: break-word;
 	
+}
+.contenthome{
+	padding: 0;
+	background-color: #F8F8FF;
+	margin: 0;
+	height: 100%;
+	width:100%; 
+	display: flex;
+	flex-direction: column;
+}
+.photocontainerhome{
+	float: left;
+	margin:0 auto;
+	width: 80.2vmin;
+	margin-bottom: 5vw;
+	background-color:rgb(254, 254, 255);
+	margin-top: 100px;
+	border: solid 1px;
+	border-color:  rgb(186, 182, 207);
+}
+.sidehome{
+	width:100%;
+	margin: 0;
+}
+.posterhome{
+	width: 100%;
+	height: 5vmin;
+	margin: 0;
+	float: left;
+	border-bottom: solid 0.1vw;
+	border-color:  rgb(186, 182, 207);
+}
+.posterhomepp{
+	float: left;
+	height: 4vmin;
+	margin: 0.5vw;
+	border-radius: 100%;
+}
+.posterhome p{
+	font-weight: bold;
+	float: left;
+	font-size: 2vmin;
+	margin: 1.5vw;
+	margin-top: 1.3vw;
+}
+.photohome{
+	height: 60.1vmin;
+	border-bottom: solid 1px;
+	border-color:  rgb(186, 182, 207);
+}
+.commentshome{
+	width: 100%;
+	margin: 0;
+	height: 20vmin;
+	overflow-x: hidden;
+	overflow-y: scroll;
+}
+.reactionshome{
+	float: left;
+	width: 100%;
+	margin: 0;
+	height: 4vmin;
+	border-bottom: solid 0.1vw;
+	border-color:  rgb(186, 182, 207);
+}
+.reactionshome p{
+	font-weight: bold;
+	float: left;
+	font-size: 2.3vmin;
+	margin-left: 1vmin;
+	margin-top: 0.6vmin;
+}
+.likeimghome{
+	float: left;
+	height: 3vmin;
+	margin: 0.3vmin;
+}
+.comimghome{
+	float: left;
+	height: 3vmin;
+	margin: 0.5vmin;
+	margin-left: 10vmin;
+}
+.commenthome{
+  	height: auto;
+  	display: flex;
+  	align-items: flex-start;
+}
+.compphome{
+	height: 5vmin;
+	border-radius: 100%;
+	margin: 0.5vmin;
+}
+.comcontainerhome{
+	margin-top: 2vmin;
+	padding-right: 0.5vmin;
+	padding-bottom: 0.5vmin;
+	align-self: stretch;
+}
+.comcontenthome{
+	margin: 0;
+	float: left;
+	font-weight: bold;
+	font-size: 1.5vmin;
+	margin-right: 0.5vmin;
+}
+.comcontent2home{
+	float: left;
+	margin: 0;
+	font-size: 1.5vmin;
+	word-wrap: break-word;	
 }
