--- a/style.css
+++ b/style.css
@@ -245,8 +245,8 @@ body{
 	font-weight: bold;
 	float: left;
 	font-size: 2vmin;
-	margin: 1.5vw;
-	margin-top: 1.3vw;
+	margin: 1.5vmin;
+	margin-top: 1.4vmin;
 }
 .photohome{
 	height: 60.1vmin;
